tests/toylang/neg/001021_mutation.toylang
program a = { if a then sleep else int sleep; } .
